Add categories and balance logic

--- a/frontEndClient/package.json
+++ b/frontEndClient/package.json
@@ -24,6 +24,7 @@
     "@angular/router": "~7.0.0",
     "angular-google-charts": "^0.1.6",
     "core-js": "^2.5.4",
+    "lodash": "^4.17.15",
     "rxjs": "~6.3.3",
     "zone.js": "~0.8.26"
   },
@@ -32,9 +33,10 @@
     "@angular/cli": "~7.0.4",
     "@angular/compiler-cli": "~7.0.0",
     "@angular/language-service": "~7.0.0",
-    "@types/node": "~8.9.4",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
+    "@types/lodash": "^4.14.137",
+    "@types/node": "~8.9.4",
     "codelyzer": "~4.5.0",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
