--- a/build.gradle
+++ b/build.gradle
@@ -31,4 +31,16 @@ dependencies {
 
     annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    testImplementation "org.junit.jupiter:junit-jupiter-api:5.3.0-RC1"
+    testImplementation "org.junit.jupiter:junit-jupiter-params:5.3.0-RC1"
+    testImplementation "org.junit.jupiter:junit-jupiter-engine:5.3.0-RC1"
+    testImplementation 'org.mockito:mockito-core:2.23.4'
+    testImplementation 'org.mockito:mockito-junit-jupiter:2.23.4'
+    testImplementation 'org.jeasy:easy-random-core:4.0.0'
+
+    testImplementation 'commons-io:commons-io:2.6'
+}
+
+test {
+    useJUnitPlatform()
 }
