--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,12 @@
+buildscript {
+    repositories {
+        jcenter()
+    }
+    dependencies {
+        classpath 'org.junit.platform:junit-platform-gradle-plugin:1.1.0-RC1'
+    }
+}
+
 plugins {
     id 'org.springframework.boot' version '2.1.6.RELEASE'
     id "org.sonarqube" version "2.7"
@@ -5,6 +14,8 @@ plugins {
     id 'java'
 }
 
+apply plugin: 'jacoco'
+apply plugin: 'org.junit.platform.gradle.plugin'
 apply plugin: 'io.spring.dependency-management'
 
 group = 'com.varunsdave.personafinance'
@@ -19,7 +30,31 @@ configurations {
 
 repositories {
     mavenCentral()
+    jcenter()
 }
+
+junitPlatform.enableStandardTestTask true
+
+jacoco {
+    toolVersion = '0.8.4'
+    applyTo junitPlatformTest
+}
+
+junitPlatform.enableStandardTestTask true
+
+junitPlatformTest {
+    jacoco {
+        destinationFile = file("${buildDir}/jacoco/test.exec")
+    }
+}
+
+test {
+    useJUnitPlatform {
+        includeEngines 'junit-jupiter', 'junit-vintage'
+    }
+}
+
+
 
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
@@ -39,8 +74,18 @@ dependencies {
     testImplementation 'org.jeasy:easy-random-core:4.0.0'
 
     testImplementation 'commons-io:commons-io:2.6'
+
+    testRuntimeOnly "org.junit.vintage:junit-vintage-engine:4.12.0"
+    testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:5.3.0-RC1"
 }
 
-test {
-    useJUnitPlatform()
+
+sonarqube {
+    properties {
+        property "sonar.java.coveragePlugin", "jacoco"
+        property "sonar.junit.reportPaths", ["build/test-results/test"]
+        property "sonar.jacoco.reportPaths", "build/reports/jacoco/test.exec"
+    }
 }
+
+
