--- a/build.gradle
+++ b/build.gradle
@@ -10,7 +10,7 @@ buildscript {
 plugins {
     id 'org.springframework.boot' version '2.1.6.RELEASE'
     id "org.sonarqube" version "2.7"
-    id "io.freefair.lombok" version "3.1.0"
+//    id "io.freefair.lombok" version "3.1.0"
     id 'java'
 }
 
@@ -77,6 +77,9 @@ dependencies {
 
     testRuntimeOnly "org.junit.vintage:junit-vintage-engine:4.12.0"
     testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:5.3.0-RC1"
+
+    compileOnly 'org.projectlombok:lombok:1.18.4'
+    annotationProcessor 'org.projectlombok:lombok:1.18.4'
 }
 
 
